--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
         </div>
       </div>
     </footer>
-    <!-- Modal window -->
+    Modal window
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-btn" type="button" data-modal-close>
