--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
             </li>
           </ul>
         </nav>
+        <button
+          class="menu-toggle js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <svg class="menu-toggle-icon" width="32" height="22">
+            <use href="./images/icon.svg#burger"></use>
+          </svg>
+        </button>
         <address class="address">
           <ul class="address-list">
             <li>
@@ -129,6 +138,10 @@
           <ul class="list">
             <li class="section-three-li">
               <img
+                srcset="
+                  ./images/images1/Rectangle71-2.jpg 1x,
+                  ./images/images1/img-1@2x.jpeg     2x
+                "
                 src="./images/images1/Rectangle71-2.jpg"
                 alt="monitor"
                 width="360"
@@ -137,6 +150,10 @@
             </li>
             <li class="section-three-li">
               <img
+                srcset="
+                  ./images/images1/img2-2.jpg    1x,
+                  ./images/images1/img-2@2x.jpeg 2x
+                "
                 src="./images/images1/img2-2.jpg"
                 alt="phone"
                 width="360"
@@ -145,6 +162,10 @@
             </li>
             <li class="section-three-li">
               <img
+                srcset="
+                  ./images/images1/img3-2.jpg    1x,
+                  ./images/images1/img-3@2x.jpeg 2x
+                "
                 src="./images/images1/img3-2.jpg"
                 alt="phone with laptop"
                 width="360"
@@ -160,6 +181,10 @@
           <ul class="list">
             <li class="page">
               <img
+                srcset="
+                  ./images/images1/img-5.jpg   1x,
+                  ./images/images1/img@2x.jpeg 2x
+                "
                 src="./images/images1/img-5.jpg"
                 alt="man with beard"
                 width="264"
@@ -202,6 +227,10 @@
             </li>
             <li class="page">
               <img
+                srcset="
+                  ./images/images1/img-2-2.jpg  1x,
+                  ./images/images1/img@2x.1.jpg 2x
+                "
                 src="./images/images1/img-2-2.jpg"
                 alt="man without beard"
                 width="264"
@@ -245,6 +274,10 @@
             </li>
             <li class="page">
               <img
+                srcset="
+                  ./images/images1/img-3-2.jpg  1x,
+                  ./images/images1/img@2x.2.jpg 2x
+                "
                 src="./images/images1/img-3-2.jpg"
                 alt="woman"
                 width="264"
@@ -287,6 +320,10 @@
             </li>
             <li class="page">
               <img
+                srcset="
+                  ./images/images1/img-4-2.jpg  1x,
+                  ./images/images1/img@2x.3.jpg 2x
+                "
                 src="./images/images1/img-4-2.jpg"
                 alt="young man"
                 width="264"
@@ -573,6 +610,38 @@
         </form>
       </div>
     </div>
+    <!-- mobile menu -->
+    <div class="menu-container js-menu-container" id="mobile-menu">
+      <button class="menu-toggle js-close-menu">
+        <svg
+          fill="currentColor"
+          viewBox="0 0 20 20"
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+            clip-rule="evenodd"
+          ></path>
+        </svg>
+      </button>
+
+      <ul class="mobile-menu">
+        <li><a href="" class="link">About</a></li>
+        <li><a href="" class="link">Products</a></li>
+        <li><a href="" class="link">Contacts</a></li>
+        <li><a href="" class="link">Career</a></li>
+      </ul>
+    </div>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
   </body>
 </html>
