--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
         </div>
       </div>
     </footer>
-    Modal window
+    <!-- Modal window -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-btn" type="button" data-modal-close>
@@ -614,7 +614,6 @@
     <div class="menu-container js-menu-container" id="mobile-menu">
       <button class="menu-toggle js-close-menu">
         <svg
-          fill="currentColor"
           viewBox="0 0 20 20"
           xmlns="http://www.w3.org/2000/svg"
           width="24"
@@ -629,10 +628,53 @@
       </button>
 
       <ul class="mobile-menu">
-        <li><a href="" class="link">About</a></li>
-        <li><a href="" class="link">Products</a></li>
-        <li><a href="" class="link">Contacts</a></li>
-        <li><a href="" class="link">Career</a></li>
+        <li class="mobile-menu-li">
+          <a href="" class="link active">Studio</a>
+        </li>
+        <li class="mobile-menu-li"><a href="" class="link">Portfolio</a></li>
+        <li class="mobile-menu-li"><a href="" class="link">Contacts</a></li>
+      </ul>
+      <ul class="address-list-mobil">
+        <li>
+          <a class="address-link-mobil-email" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a class="address-link-mobil-phone" href="tel:+110001111111"
+            >+11 (000) 111-11-11</a
+          >
+        </li>
+      </ul>
+      <ul class="section-mobil-network">
+        <li class="footer-network-li">
+          <a class="footer-network-link" href="">
+            <svg class="footer-network-icons" width="24" height="24">
+              <use href="./images/network.icon.svg#instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer-network-li">
+          <a class="footer-network-link" href="">
+            <svg class="footer-network-icons" width="24" height="24">
+              <use href="./images/network.icon.svg#twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer-network-li">
+          <a class="footer-network-link" href="">
+            <svg class="footer-network-icons" width="24" height="24">
+              <use href="./images/network.icon.svg#facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer-network-li">
+          <a class="footer-network-link" href="">
+            <svg class="footer-network-icons" width="24" height="24">
+              <use href="./images/network.icon.svg#linkedin"></use>
+            </svg>
+          </a>
+        </li>
       </ul>
     </div>
     <script
