--- a/portfolio.html
+++ b/portfolio.html
@@ -346,5 +346,80 @@
         </div>
       </div>
     </footer>
+    <!-- mobile menu -->
+    <div class="menu-container js-menu-container" id="mobile-menu">
+      <button class="menu-toggle js-close-menu">
+        <svg
+          viewBox="0 0 20 20"
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+            clip-rule="evenodd"
+          ></path>
+        </svg>
+      </button>
+
+      <ul class="mobile-menu">
+        <li class="mobile-menu-li">
+          <a href="" class="link active">Studio</a>
+        </li>
+        <li class="mobile-menu-li"><a href="" class="link">Portfolio</a></li>
+        <li class="mobile-menu-li"><a href="" class="link">Contacts</a></li>
+      </ul>
+      <ul class="address-list-mobil">
+        <li>
+          <a class="address-link-mobil-email" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a class="address-link-mobil-phone" href="tel:+110001111111"
+            >+11 (000) 111-11-11</a
+          >
+        </li>
+      </ul>
+      <ul class="section-mobil-network">
+        <li class="footer-network-li">
+          <a class="footer-network-link" href="">
+            <svg class="footer-network-icons" width="24" height="24">
+              <use href="./images/network.icon.svg#instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer-network-li">
+          <a class="footer-network-link" href="">
+            <svg class="footer-network-icons" width="24" height="24">
+              <use href="./images/network.icon.svg#twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer-network-li">
+          <a class="footer-network-link" href="">
+            <svg class="footer-network-icons" width="24" height="24">
+              <use href="./images/network.icon.svg#facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="footer-network-li">
+          <a class="footer-network-link" href="">
+            <svg class="footer-network-icons" width="24" height="24">
+              <use href="./images/network.icon.svg#linkedin"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="js/mobile-menu.js"></script>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
